# ai-grc-assistant-new

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE_DECISION_LOG.md  CLAUDE.md  Makefile  PROJECT_STATE.md  README.md  RELEASE_PROCESS.md  ai-grc-assistant.code-workspace  eslint.config.base.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/openapi/: generate.py
apps/api/src/grc_api/: __init__.py  ai.py  api_v1.py  app.py  composition.py  container.py  settings.py  web_runtime.py
apps/api/src/grc_api/middleware/: __init__.py  errors.py  idempotency.py  request_context.py
apps/api/src/grc_api/observability/: __init__.py  context.py  logging.py
apps/api/src/grc_api/routers/: __init__.py  assessments.py  audit.py  controls.py  evidence.py  frameworks.py  health.py  knowledge_worker.py  missions.py  orchestrator.py  platform.py  policies.py  policy_intelligence.py  regulation_review.py  reporting.py  risks.py  workspaces.py
apps/api/src/grc_api/runtime/: __init__.py  authorization.py  buses.py  clock.py  events.py  ids.py  in_memory_uow.py  registry.py
apps/api/src/grc_api/schemas/: __init__.py  common.py
apps/api/src/grc_api/security/: __init__.py  authentication.py  dependencies.py
apps/api/tests/: conftest.py  test_capabilities.py  test_health_and_docs.py  test_idempotency.py  test_knowledge_worker.py  test_missions_lifecycle.py  test_orchestrator.py  test_policy_intelligence.py  test_regulation_review.py  test_security_and_tenancy.py  test_web_runtime.py
apps/orchestrator/: README.md  pyproject.toml
apps/orchestrator/src/grc_orchestrator/: __init__.py
apps/web/: .env.example  DESIGN_SYSTEM.md  Dockerfile  README.md  SECURITY.md  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
apps/worker/: README.md  pyproject.toml
apps/worker/src/grc_worker/: __init__.py  knowledge_learning_loop.py  regulation_ingestion_loop.py
apps/worker/tests/: test_knowledge_learning_loop.py
apps/workflow/: README.md  pyproject.toml
apps/workflow/src/grc_workflow/: __init__.py
config/: default.yaml
config/feature-flags/: README.md
config/policies/: README.md
docker/: api.Dockerfile  orchestrator.Dockerfile  web.Dockerfile  worker.Dockerfile  workflow.Dockerfile
docker/base/: node-base.Dockerfile  python-base.Dockerfile
docker/compose/: docker-compose.deps.yml  docker-compose.yml
docs/: SOFTWARE_ARCHITECTURE_HANDBOOK.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-strategy.md  0003-mission-centric-design.md  0004-ai-orchestrator.md  0005-multi-agent-architecture.md  0006-tools-and-registry.md  0007-framework-engine.md  0008-knowledge-and-rag.md  0009-event-driven-architecture.md  0010-plugin-architecture.md  0011-ddd-boundaries.md  0012-postgres-pgvector.md  0013-fastapi-nextjs-stack.md  0014-security-and-multitenancy.md  0015-audit-and-traceability.md  0016-workspace-model.md  0017-policy-intelligence-runtime-and-web-postgres-bridge.md  0018-regulatory-intelligence-engine.md  0019-regulatory-connectors-and-crawlers.md  0020-policy-hunter-agent.md  0021-policy-analyst-agent.md  0022-policy-intelligence-api-exposure.md  0023-policy-intelligence-frontend-proxy.md  0024-policy-builder-agent.md  0025-autonomous-knowledge-engine.md  0026-autonomous-knowledge-research.md  0027-domain-ontology-engine.md  0028-autonomous-knowledge-worker.md  0029-ai-worker-control-center.md  0030-saudi-regulations-ingestion-pipeline.md  0031-regulation-review-and-embeddings.md  0032-regulation-retrieval-priority-merge.md  0034-invite-based-access.md  0035-v2-knowledge-library.md  0036-v2-context-builder.md  0037-v2-prompt-orchestrator.md  0038-v2-pipeline-contracts-and-ai-orchestrator.md  0039-v2-platform-hardening.md  0040-v2-tenancy-model.md  0041-knowledge-source-storage.md  (+16 more)
docs/api/: README.md
docs/architecture/: ARCHITECTURE_AUDIT.md  PROJECT_SKELETON.md  persistence-implementation-report.md
docs/frameworks/: README.md
docs/onboarding/: README.md
docs/runbooks/: README.md
frameworks/: README.md
frameworks/mappings/: README.md  iso-27001_to_nca-ecc.json
frameworks/nca-ecc/: metadata.yaml
frameworks/schema/: README.md
infra/: README.md
knowledge-catalog/: README.md  audit.json  compliance.json  contracts.json  cybersecurity_governance.json  data_protection.json  governance.json  internal_controls.json  policies_procedures.json  regulatory_obligations.json  risk_management.json  vendor_management.json
ontology/: README.md  audit.json  compliance.json  contracts.json  cybersecurity_governance.json  data_protection.json  governance.json  internal_controls.json  relationships.json  risk_management.json
prompts/: CHANGELOG.md  README.md
regulatory-sources/: README.md
regulatory-sources/sa/: cma.json  mhrsd.json  nca.json  sama.json  sdaia.json  zatca.json
scripts/: README.md
scripts/ci/: mypy-workspace.sh
tests/: README.md
trusted-sources/: README.md
trusted-sources/sa/: cma.json  mhrsd.json  nca.json  sama.json  sdaia.json  zatca.json
trusted-sources/us/: nist.json
v2/apps/grc-api/: pyproject.toml
v2/apps/grc-api/grc_api/: __init__.py  adapters.py  app.py  composition.py  deps.py  dev.py  document_adapters.py  errors.py  launch.py  result_adapters.py  schemas.py  security.py
v2/apps/grc-api/grc_api/routers/: approvals.py  dashboard.py  documents.py  health.py  missions.py
v2/apps/grc-api/tests/: conftest.py  test_actions.py  test_approvals.py  test_create_start.py  test_dashboard.py  test_deliverable.py  test_detail.py  test_documents.py  test_missions.py
v2/apps/grc-api/tests/production/: README.md  conftest.py  test_durability.py  test_production_defaults.py  test_transaction_boundary.py
v2/docs/: CONCEPTUAL_DOMAIN_MODEL_V1.md  DESIGN_REVIEW_CHECKLIST_V1.md  (+16 more)
(+668 files in other folders)
