# ============================================================
# AI GRC Assistant — Python workspace root.
# Manages backend/AI packages and apps via uv workspaces.
# Shared tooling config (ruff, black, mypy, pytest) lives here.
# ============================================================

[project]
name = "ai-grc-assistant"
version = "0.0.0"
description = "AI GRC Assistant — backend & AI monorepo (Python workspace root)."
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/orchestrator",
  "apps/workflow",
  "apps/worker",
  "packages/agents",
  "packages/tools",
  "packages/rag",
  "packages/framework-engine",
  "packages/llm",
  "packages/services",
  "packages/domain",
  "packages/extraction",
  "packages/extraction-adapters",
  "packages/knowledge-graph",
  "packages/persistence",
  "packages/persistence-web",
  "packages/regulatory-intelligence",
  "packages/regulatory-intelligence-adapters",
  "packages/regulatory-crawlers",
  "packages/policy-hunter",
  "packages/policy-analyst",
  "packages/policy-builder",
  "packages/knowledge-intelligence",
  "packages/knowledge-intelligence-adapters",
  "packages/knowledge-research",
  "packages/knowledge-research-adapters",
  "packages/knowledge-ontology",
  "packages/knowledge-worker",
  "packages/events",
  "packages/plugins",
  "packages/observability",
  "packages/security",
  "packages/config",
]

# Every internal package is a workspace member; this newer uv release requires each one to be
# named explicitly here (it no longer infers workspace sourcing just from name matching), even
# though `[tool.uv.workspace] members` already lists every checkout path.
[tool.uv.sources]
grc-app-api = { workspace = true }
grc-app-orchestrator = { workspace = true }
grc-app-workflow = { workspace = true }
grc-app-worker = { workspace = true }
grc-agents = { workspace = true }
grc-tools = { workspace = true }
grc-rag = { workspace = true }
grc-framework-engine = { workspace = true }
grc-llm = { workspace = true }
grc-services = { workspace = true }
grc-domain = { workspace = true }
grc-extraction = { workspace = true }
grc-extraction-adapters = { workspace = true }
grc-knowledge-graph = { workspace = true }
grc-persistence = { workspace = true }
grc-persistence-web = { workspace = true }
grc-regulatory-intelligence = { workspace = true }
grc-regulatory-intelligence-adapters = { workspace = true }
grc-regulatory-crawlers = { workspace = true }
grc-policy-hunter = { workspace = true }
grc-policy-analyst = { workspace = true }
grc-policy-builder = { workspace = true }
grc-knowledge-intelligence = { workspace = true }
grc-knowledge-intelligence-adapters = { workspace = true }
grc-knowledge-research = { workspace = true }
grc-knowledge-research-adapters = { workspace = true }
grc-knowledge-ontology = { workspace = true }
grc-knowledge-worker = { workspace = true }
grc-events = { workspace = true }
grc-plugins = { workspace = true }
grc-observability = { workspace = true }
grc-security = { workspace = true }
grc-config = { workspace = true }

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
# Intentionally kept for portability/readability across the codebase:
#   UP042 — `(str, Enum)` is explicit and works on every supported runtime.
#   UP017 — `timezone.utc` is portable and clear.
#   N818  — domain exceptions use intention-revealing names (e.g. InvariantViolation).
#   UP046/UP047/UP007 — keep `Generic[T]` and `Union[...]` for runtime portability.
ignore = ["UP042", "UP017", "N818", "UP046", "UP047", "UP007"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations are generated artifacts: their long create_table/index calls are kept
# verbatim for diff-ability against future autogenerated revisions.
"packages/persistence/grc_persistence/migrations/versions/*" = ["E501"]
# FastAPI routes use callables (Query/Path/Depends/Security) as parameter defaults by design —
# that is the framework's dependency-injection contract, not the mutable-default bug B008 targets.
"apps/api/src/grc_api/routers/*" = ["B008"]

# ---------- Black ----------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
namespace_packages = true

# asyncpg ships no inline type stubs/py.typed marker (an upstream packaging gap, not ours).
[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps", "packages", "tests"]
python_files = ["test_*.py", "*_test.py"]
# Many packages have a `tests/` directory; without importlib mode pytest collides on the
# repeated top-level module name "tests" once more than one such package has an `__init__.py`.
addopts = "--import-mode=importlib"
