[project]
name = "grc-app-orchestrator"
version = "0.0.0"
description = "AI Orchestrator service: mission planning, routing, memory, policy, human gates."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grc_orchestrator"]
