[project]
name = "grc-app-workflow"
version = "0.0.0"
description = "Durable workflow engine workers running missions reliably."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grc_workflow"]
