[project]
name = "grc-api"
version = "0.1.0"
description = "Rasheed V1 Product API Host (ADR 0052). The single official FastAPI surface that serves every command and query in REST_API_CONTRACT_V1.md. A COMPOSITION ROOT ONLY: it wires Auth, Tenant Context, Read Models, the Mission Engine/Runtime, and the Tool Registry, and shapes HTTP — no business logic lives here (that stays in v2/packages/*). Composes v2 packages exclusively; never imports the old apps/ or packages/ generation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pipeline-contracts",
    "mission-read-model",
    "mission-engine",
    "mission-application",
    "deliverables",
    "framework-library",
    "document-read-model",
    "knowledge-runtime",
    "assistant-runtime",
]

[dependency-groups]
# DEV ONLY. The `dependencies` above are the production path and are deliberately untouched by the
# Wave 1 test commit — `psycopg` and `mission-store` exist here solely so `tests/production` can
# stand the durable adapters up and inspect raw rows out of band. They become production
# dependencies only when the wiring commits land.
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "mission-store",
]

[tool.uv.sources]
pipeline-contracts = { path = "../../packages/pipeline-contracts", editable = true }
mission-read-model = { path = "../../packages/mission-read-model", editable = true }
mission-engine = { path = "../../packages/mission-engine", editable = true }
mission-application = { path = "../../packages/mission-application", editable = true }
deliverables = { path = "../../packages/deliverables", editable = true }
framework-library = { path = "../../packages/framework-library", editable = true }
document-read-model = { path = "../../packages/document-read-model", editable = true }
knowledge-runtime = { path = "../../packages/knowledge-runtime", editable = true }
assistant-runtime = { path = "../../packages/assistant-runtime", editable = true }
# dev-only (tests/production) — not a production dependency yet
mission-store = { path = "../../packages/mission-store", editable = true }

# These ship no py.typed; consume them as untyped imports (our own code stays strict).
[[tool.mypy.overrides]]
module = "mission_engine.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deliverables.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "framework_library.*"
ignore_missing_imports = true

# knowledge-runtime ships py.typed, but its transitive corpus/chunk types come from retrieval-engine
# and knowledge-importer, which do not — consume those as untyped (our own code stays strict).
[[tool.mypy.overrides]]
module = "retrieval_engine.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "knowledge_importer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "assistant_runtime.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grc_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
